--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 MAIN_SERVER_IP=192.168.1.15
 MAIN_SERVER_PORT=5000
 SURICATA_LOG_PATH=../suricata/logs/eve.json
+SURICATA_SENSOR_IP=192.168.1.56  # IP del Nodo de Borde
 APP_PORT=8000
 
 # Configuración de Base de Datos MySQL (Remoto)
