feat: Añade scripts para la configuración automatizada de la base de datos y el inventario, y actualiza las variables de entorno y el esquema de la base de datos.

--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ APP_PORT=8000
 # Configuración de Base de Datos MySQL (Remoto)
 DB_HOST=192.168.1.18
 DB_NAME=lab_vulnerable
-DB_USER=root
-DB_PASS=root_password  # Cambia esto por la contraseña real
+DB_USER=webuser
+DB_PASS=web123
