feat: Se añaden scripts de Python para la configuración completa del sistema, incluyendo red, MySQL, Nginx, Suricata e inventario, con integración Firebase.

--- a/scripts/configuration.json
+++ b/scripts/configuration.json
@@ -4,6 +4,5 @@
   "projectId": "unamadwebprueba",
   "storageBucket": "unamadwebprueba.firebasestorage.app",
   "messagingSenderId": "703817504357",
-  "appId": "1:703817504357:web:8576591b25037857afd88c",
-  "databaseURL": "https://unamadwebprueba-default-rtdb.firebaseio.com"
+  "appId": "1:703817504357:web:8576591b25037857afd88c"
 }
