feat: implementa el servidor central para gestión de sensores y bloqueo de IP, actualiza la configuración de red en `.env` y añade un script de heartbeat para la base de datos.

--- a/.env
+++ b/.env
@@ -2,10 +2,11 @@
 # Este archivo contiene las IPs y credenciales del sistema
 
 # IPs de los Servidores
-ADMIN_IP=192.168.1.15
+ADMIN_IP=192.168.1.59
 NGINX_IP=192.168.1.56
 DB_IP=192.168.1.58
-LDAP_IP=192.168.1.15
+LDAP_IP=192.168.1.59
+LDAP_DOMAIN=prueba.com
 
 # Credenciales de Base de Datos
 DB_NAME=lab_vulnerable
