--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@
 # Este archivo contiene las IPs y credenciales del sistema
 
 # IPs de los Servidores
-ADMIN_IP=192.168.1.59
+ADMIN_IP=192.168.1.15
 NGINX_IP=192.168.1.56
 DB_IP=192.168.1.58
-LDAP_IP=192.168.1.59
-LDAP_DOMAIN=prueba.com
+LDAP_IP=192.168.1.15
+LDAP_DOMAIN=softwarelibre.local
 
 # Credenciales de Base de Datos
 DB_NAME=lab_vulnerable
